🌌 Add space background to Liquid style
- Add stunning space technology background from Unsplash
- Enhanced glassmorphism effects with reduced overlay intensity
- Improved backdrop filters for better image visibility
- Maintained all existing functionality and project data
- Added chunky borders and retro styling improvements
- Professional space-age aesthetic for Liquid style

--- a/demo.html
+++ b/demo.html
@@ -19,7 +19,12 @@
                 <div class="floating-element"></div>
             </div>
             <div class="header-content">
-                <h1>Project Dashboard</h1>
+                <div class="style-switcher">
+                    <button class="style-btn active" data-style="minimal">Minimal</button>
+                    <button class="style-btn" data-style="liquid">Liquid</button>
+                    <button class="style-btn" data-style="retro">Retro</button>
+                </div>
+                <h1 data-text="Project Dashboard">Project Dashboard</h1>
                 <p>Manage and showcase your vibe coded projects</p>
                 <div class="author">Created by Jason George</div>
             </div>
